# zephyr_echo_test_suite

./: CMakeLists.txt  README.md  overlay-debug.conf  overlay-log.conf  prj.conf  server.py
boards/: rpi_pico.conf  rpi_pico.overlay
scripts/: client.py  client_udp.py  server.py  server_udp.py
src/: main.c
